Changed login view segue name. Updated storybaord so login and view campaigns use the same segue.

--- a/WeCrowd/Base.lproj/CampaignFlow.storyboard
+++ b/WeCrowd/Base.lproj/CampaignFlow.storyboard
@@ -45,9 +45,6 @@
                                 <state key="normal" title="Browse all campaigns">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <segue destination="tkk-YJ-SKn" kind="show" id="Pl2-14-ZMF"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jew-qO-dWS">
                                 <rect key="frame" x="214" y="374" width="173" height="35"/>
@@ -83,6 +80,9 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="WeCrowd" id="hV6-I7-wNt"/>
+                    <connections>
+                        <segue destination="tkk-YJ-SKn" kind="show" identifier="entryViewToFeedViewSegue" id="OEY-uT-xpi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -171,7 +171,7 @@
                     <connections>
                         <outlet property="emailField" destination="EjD-OD-ML4" id="ITB-jp-ebh"/>
                         <outlet property="passwordField" destination="tyb-ZU-jrP" id="THy-XZ-J3c"/>
-                        <segue destination="tkk-YJ-SKn" kind="show" identifier="merchantLoginToFeedSegue" id="iuM-Qj-g2P"/>
+                        <segue destination="tkk-YJ-SKn" kind="show" identifier="entryViewToFeedViewSegue" id="iuM-Qj-g2P"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Npx-mk-GDX" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -326,7 +326,7 @@
         <image name="Logo" width="300" height="55"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Pl2-14-ZMF"/>
+        <segue reference="OEY-uT-xpi"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="0.38665899166867213" blue="0.2383080413807257" alpha="1" colorSpace="calibratedRGB"/>
 </document>
