--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -6,6 +6,24 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="Ghu-WS-6em">
+            <objects>
+                <viewController id="Nsw-6d-KCV" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="T0T-zz-vQr"/>
+                        <viewControllerLayoutGuide type="bottom" id="VeX-R7-ROr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Q7f-0A-JRq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WM1-9J-Eoq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1072" y="293"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="m8P-0v-Qg0">
             <objects>
                 <viewController id="Zdb-yW-H1R" sceneMemberID="viewController">
@@ -120,7 +138,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Npm-ru-lP9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1065" y="653"/>
+            <point key="canvasLocation" x="1072" y="1036"/>
         </scene>
         <!--Payment Option-->
         <scene sceneID="DJd-T9-3Au">
@@ -146,6 +164,9 @@
                                 <state key="normal" title="Swipe Card">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Nsw-6d-KCV" kind="show" id="gu0-Xd-VxP"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XZR-Xq-rMm">
                                 <rect key="frame" x="240" y="180" width="121" height="38"/>
